Build 0.0.0.7  Add Endorsement Status Icon(s) to Right Column Added https://github.com/wevote/EndorsementExtension/issues/36 Made icons non-transparent for dark mode, resolves wevote/EndorsementExtension/issues/42 Resolves Issues from October 8 Standup https://github.com/wevote/EndorsementExtension/issues/35

--- a/weVote.css
+++ b/weVote.css
@@ -232,31 +232,28 @@
   float: right;
   padding: 0 4px;
   margin-right: 5%;
-  /*text-transform: uppercase;*/
 }
 
 #weFlexBox {
   display: flex;
-  margin: auto 0 0;
+  flex-direction: row;
+  height: calc(100vh - 83px);
 }
 
 #sideArea {
-  margin-left: 0;
-  margin-right: 15px;
   border-top: grey solid 2px;
   padding: 5px;
-  width: 460px;
   grid-row: 1;
-  height: 100vh;
   overflow-x: hidden !important;
+  border-bottom: 1px solid black;
 }
 
 #frameDiv {
-  border: 2px solid black;
+  border: 1px solid black;
   margin-left: 10px;
+  padding-bottom: 5px;
   position: relative;
   overflow: hidden;
-  height: 100vh;
   width: 100%
 }
 
@@ -264,7 +261,6 @@
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
   height: 100%;
   border: 0;
 }
@@ -272,7 +268,7 @@
 #topMenu {
   display: flex;
   justify-content: left;
-  margin: 2px 10px 2px 4px;
+  margin: 2px 0 2px 4px;
 }
 
 #topMenuDiv {
