--- a/weVoteGrid.css
+++ b/weVoteGrid.css
@@ -40,10 +40,10 @@
   grid-template-columns: 50px auto 56px;
   grid-template-rows: 24px 16px auto;
   grid-gap: 1px;
-  width: 360px;
+  width: 100%;
   height: 80px;
   border-top: 1px solid grey;
-  padding-top: 2px;
+  padding: 2px 0 0 0;
 }
 
 .gridUnfurlableContainer > div {
@@ -68,7 +68,7 @@
   transform: translate(-2px, -3px);
 }
 
-.thumbOnly {
+.thumbOnly, .emptyInfo {
   width: 26px;
   transform: translate(12px, -1px);
 }
